$Id: History,v 1.3 1999-11-09 18:40:52 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 09, 99      J. Apostolakis        geommng-V00-01-01

G4VPhysicalVolume:
  i) Made G4RotationMatrix G4VPhysicalVolume::GetObjectRotation() const
      non-inline and moved it to source file from inline file.
 ii) Added GetObjectRotationValue() method.
iii) Minimal changes of comments for Software Ref. Manual in header file

  [ Change i) caused problem with HP aCC compiler A.01.19.  Atlas 
     was patching the code to try to get around this, but this 
     resolution is much better ] 

March    17, 99      J. Apostolakis        geommng-01-00-02

G4AffineTransform.icc:  
 
  Corrected a typo in InverseProduct (rzy->ryz) that caused the incorrect 
calculation of a compound transformation (if tf1.tz*tf2.ryz != 0). 

  [ This problem was seen in the code of two Atlas Geant4 collaborators:
     Andrea del' Acqua and Maya Stavrinakou ] 
