@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-11-09 18:40:52 japost Exp $
+$Id: History,v 1.4 1999-11-30 12:10:11 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,13 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+November 30, 99      G. Cosmo              geommng-V00-01-02
+
+G4DrawVoxels.cc:
+
+Fixed initialization of (const G4VPhysicalVolume*) in method
+GetAbsoluteTransformation(). Fix needed for NT/VC++ compiler.
 
 November 09, 99      J. Apostolakis        geommng-V00-01-01
 
